<resources>

    <string name="app_name">约个球</string>

    <string name="umeng_appkey">559fd71067e58e4c2d00053f</string>
    <string name="umeng_channel">umeng</string>
    <string name="umeng_message_secret">ae3360e4ba54ce2688010c74698488c8</string>
    <string name="amap_appkey">1bbf1b34b37252a1cf546555aff00c28</string>

    <!-- 登录注册 -->
    <string name="login_title">登录</string>
    <string name="login_click2captcha">获取验证码</string>
    <string name="login_captcha_retry" formatted="false">%s秒后重新获取</string>
    <string name="login_mobile">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_captcha">验证码</string>
    <string name="login_button">登录</string>
    <string name="login_captcha_send_succ">验证码已发送到您的手机</string>
    <string name="login_captcha_send_fail">验证码发送失败，请稍后重试</string>
    <string name="login_mobile_error">手机号错误</string>
    <string name="login_captcha_error">验证码错误</string>
    <string name="login_register">注册</string>
    <string name="login_resetpwd">找回密码</string>
    <string name="register_title">注册</string>
    <string name="register_button">立即注册</string>
    <string name="register_login">账号</string>
    <string name="register_login_hint">登录账号</string>
    <string name="register_password">密码</string>
    <string name="register_password_hint">6至16位密码</string>
    <string name="register_mobile">手机号</string>
    <string name="register_mobile_hint">手机号</string>
    <string name="register_captcha">验证码</string>
    <string name="register_captcha_hint">手机验证码</string>

    <string name="location_title">选择城市</string>
    <string name="location_tbd" formatted="false">%s{fa-angle-down}</string>
    <string name="location_gps">GPS定位城市</string>
    <string name="location_ing">{fa-spinner}</string>
    <string name="location_servcity">已开通服务城市</string>
    <string name="location_checked">{fa-check}</string>

    <string name="game_detail_title">活动详情</string>
    <string name="game_signup">立即报名</string>
    <string name="game_signed">已报名</string>
    <string name="map_title">查看地图</string>
    <string name="game_organizer" formatted="false">%s %s</string>
    <string name="game_player" formatted="false">限报%s人 已报%s人</string>
    <string name="game_rule" formatted="false">%s人制</string>
    <string name="price_yuan" formatted="false">%s元</string>
    <string name="price_rmb" formatted="false">￥%s</string>

    <string name="order_title">提交订单</string>
    <string name="order_confirm">提交订单</string>
    <string name="order_label_number">人数:</string>
    <string name="order_label_total">小计:</string>
    <string name="order_label_coupon">优惠券:</string>
    <string name="order_coupon">使用优惠券</string>
    <string name="order_label_amount">订单总价:</string>

    <string name="payment_title">支付订单</string>
    <string name="payment_checked">{fa-check}</string>
    <string name="payment_alipay">支付宝支付</string>
    <string name="payment_weixin">微信支付</string>
    <string name="payment_confirm">确认支付</string>
    <string name="payment_result_title">支付结果</string>
    <string name="payment_success">支付成功</string>
    <string name="payment_fail">支付失败</string>
    <string name="payment_time_remain1">支付剩余时间:&#160;</string>
    <string name="payment_time_remain2" formatted="false">%s:%s</string>
    <string name="payment_order_title" formatted="false">订单名称:&#160;%s</string>
    <string name="payment_order_price" formatted="false">订单价格:&#160;%s元</string>

    <string name="mine_title">我的</string>
    <string name="mine_order">我的订单</string>
    <string name="mine_coupon">我的优惠券</string>
    <string name="mine_message">我的消息</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="mine_share">邀请好友使用</string>
    <string name="mine_about">关于我们</string>
    <string name="mine_logout">退出登录</string>

    <string name="userinfo_title">我的信息</string>
    <string name="userinfo_avatar">头像</string>
    <string name="userinfo_nickname">昵称</string>
    <string name="userinfo_mobile">手机</string>
    <string name="userinfo_modifypwd">修改密码</string>
    <string name="userinfo_modify">提交</string>

    <string name="resetpwd_title">修改密码</string>
    <string name="resetpwd_origin">原密码</string>
    <string name="resetpwd_new">新密码</string>
    <string name="resetpwd_confirm">确认新密码</string>
    <string name="resetpwd_submit">提交</string>

    <string name="myorder_list_title">我的订单</string>
    <string name="myorder_title">订单详情</string>
    <string name="myorder_gotopay">去支付</string>
    <string name="myorder_signin">签到</string>

    <string name="coupon_title">我的优惠券</string>

    <string name="message_title">消息通知</string>
    <string name="feedback_title">意见反馈</string>

    <string name="share_title">邀请朋友</string>
    <string name="share_weixin">微信</string>
    <string name="share_weixinfriends">微信朋友圈</string>

    <string name="about_title">关于我们</string>

    <string name="load_reload">加载失败，点击重新加载</string>
    <string name="load_norecord">暂无记录</string>

    <string name="me">我</string>

    <string name="unifiedorder_v3_wx">APP支付生成预支付订单</string>
    <string name="pay__pre_by_wxap">生成APP微信支付参数</string>

    <string name="app_tip">提示</string>
    <string name="pay_by_wxap">调起微信支付</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="input_reqkey">输入reqkey</string>
    <string name="input_package_value">输入package value</string>
    <string name="input_sign">输入sign</string>
    <string name="getting_access_token">正在获取access token…</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单…</string>
    <string name="paying">支付中</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>
