<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/titlebar"
        style="@style/TitleBar">

        <ImageView
            android:id="@+id/back"
            style="@style/TitleBarLeft"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/title"
            style="@style/TitleBarTitle"
            android:text="@string/resetpwd_title" />

    </RelativeLayout>

    <EditText
        android:id="@+id/password_origin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vertical_48dp"
        android:layout_marginTop="@dimen/vertical_margin"
        android:gravity="center_vertical"
        android:hint="@string/resetpwd_origin"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_primary"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_16sp" />

    <EditText
        android:id="@+id/password_new"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vertical_48dp"
        android:layout_marginTop="@dimen/vertical_margin"
        android:gravity="center_vertical"
        android:hint="@string/resetpwd_new"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_primary"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_16sp" />

    <EditText
        android:id="@+id/password_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vertical_48dp"
        android:layout_marginTop="@dimen/vertical_margin"
        android:gravity="center_vertical"
        android:hint="@string/resetpwd_confirm"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_primary"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_16sp" />

    <Button
        android:id="@+id/button_submit"
        style="@style/Button.Large.Orange"
        android:layout_marginLeft="@dimen/padding_primary"
        android:layout_marginRight="@dimen/padding_primary"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/resetpwd_submit" />

</LinearLayout>