<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        style="@style/TitleBar">

        <ImageView
            android:id="@+id/back"
            style="@style/TitleBarLeft"
            android:contentDescription="@string/app_name" />

        <TextView
            style="@style/TitleBarTitle"
            android:text="@string/userinfo_title" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/avatar_height"
        android:background="@color/bg_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/padding_primary"
            android:text="@string/userinfo_avatar"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_16sp" />

        <ImageView
            android:id="@+id/more"
            style="@style/MoreItemArrow"
            android:layout_marginRight="@dimen/padding_primary"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padding_primary"
            android:layout_toLeftOf="@id/more" />

    </RelativeLayout>

    <com.yueqiu.widget.IcsLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:background="@color/bg_white"
        android:divider="@drawable/line_divider"
        android:orientation="vertical"
        android:showDividers="beginning|middle|end">

        <com.yueqiu.widget.SettingView
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/userinfo_nickname" />

        <com.yueqiu.widget.SettingView
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/userinfo_mobile" />

        <com.yueqiu.widget.SettingView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/userinfo_modifypwd" />

    </com.yueqiu.widget.IcsLinearLayout>

    <Button
        android:id="@+id/button_logout"
        style="@style/Button.Large.Orange"
        android:layout_marginLeft="@dimen/padding_primary"
        android:layout_marginRight="@dimen/padding_primary"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/mine_logout" />

</LinearLayout>