<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/location"
            style="@style/TitleBarLeft" />

        <TextView
            style="@style/TitleBarTitle"
            android:text="@string/payment_title" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_user"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:background="@color/bg_white">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/padding_primary"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/avatar"
            android:textColor="@color/text_primary"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/more"
            style="@style/MoreItemArrow"
            android:layout_marginRight="@dimen/padding_primary"
            android:contentDescription="@string/app_name" />

    </RelativeLayout>

    <com.yueqiu.widget.IcsLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:background="@color/bg_white"
        android:divider="@drawable/line_divider"
        android:orientation="vertical"
        android:showDividers="beginning|middle|end">

        <com.yueqiu.widget.SettingView
            android:id="@+id/order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/mine_order" />

        <com.yueqiu.widget.SettingView
            android:id="@+id/coupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/mine_coupon" />

        <com.yueqiu.widget.SettingView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/mine_message" />

    </com.yueqiu.widget.IcsLinearLayout>

    <com.yueqiu.widget.IcsLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:background="@color/bg_white"
        android:divider="@drawable/line_divider"
        android:orientation="vertical"
        android:showDividers="beginning|middle|end">

        <com.yueqiu.widget.SettingView
            android:id="@+id/suggest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/mine_suggest" />

        <com.yueqiu.widget.SettingView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/mine_about" />

    </com.yueqiu.widget.IcsLinearLayout>

    <Button
        android:id="@+id/order_pay"
        style="@style/Button.Large.Orange"
        android:layout_marginLeft="@dimen/padding_primary"
        android:layout_marginRight="@dimen/padding_primary"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/payment_confirm" />

</LinearLayout>